--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@mui/x-date-pickers": "^7.22.2",
     "axios": "^1.7.7",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1"
   },
